Save/Update files [ci skip]

--- a/source/localisation/flavor_events_l_english.yml
+++ b/source/localisation/flavor_events_l_english.yml
@@ -1169,7 +1169,7 @@
  flavor_rus.EVTOPTB3419:0 "中国の臣下であるふりをする。"
  flavor_rus.EVTOPTC3419:0 "中国の臣下であるふりをして、貢物を送る。"
  flavor_rus.EVTNAME3420:0 "ステンカ・ラージンのコサックの反乱"
- flavor_rus.EVTDESC3420:0 "ステンカ・ラージン（またはステンカ・チモフェエヴィチ）は、1667-69年にペルシアとロシアの住民への一連の成功した襲撃を実行したドン・コサックの首長だった。大きな名声と富を獲得したラージンは、1670年にヴォルガにあるロシア皇帝の要塞都市に対して新たな戦闘を開始した。約7,000人のコサックの軍勢で、彼はツァリーツィンとアストラハンを強奪した。その両方の町で、彼と彼の兵士たちは酒飲みに明け暮れ、貴族や軍人に対する野蛮な残虐行為を続けた。また、地方行政をコサックの自治制度に置き換えた。ラージンはヴォルガへ前進を続け、その途中で彼は彼の反乱に加わるために奴隷や都市の下層階級を扇動した。彼はサラトフを陥落させてシンビルスクに向かったが、彼の反乱はヴォルガ地方全域、さらには中央ロシア州の一部にまで広がっていた。ラージンの成功を警戒して、皇帝アレクセイはシンビルスクを解放するために軍隊を送った。その軍隊は、ラージンの無防備で貧弱な軍隊へ決定的な敗北をもたらした。ラージンはドンに逃げたが、1671年4月24日、彼は皇帝支持者のコサックによって捕らえられ、皇帝の当局に引き渡された。モスクワに運ばれ拷問を受けたラージンは、赤の広場で四つ裂きの刑に処された。"
+ flavor_rus.EVTDESC3420:0 "ステンカ・ラージン（またはステンカ・チモフェエヴィチ）は、1667-69年にペルシアとロシアの居留地に一連の襲撃を実行し、成功させたドン・コサックの首長だった。大きな名声と富を獲得したラージンは、1670年にヴォルガにあるロシア皇帝の要塞都市に対して新たな戦闘を開始した。約7,000人のコサックの軍勢で、彼はツァリーツィンとアストラハンを強奪した。その両方の町で、彼と彼の兵士たちは酒乱騒ぎと乱痴気騒ぎを起こし、貴族や軍人に対する野蛮な残虐行為を行った。また、地方行政をコサックの自治制度に置き換えた。ラージンはヴォルガへ前進を続け、その途中で彼は奴隷や都市の下層階級を扇動し、彼の反乱に加わえさせた。彼はサラトフを陥落させてシンビルスクに向かったが、彼の反乱はヴォルガ地方全域、さらには中央ロシア州の一部にまで広がっていた。ラージンの成功を警戒して、皇帝アレクセイはシンビルスクを解放するために軍隊を送った。その軍隊は、ラージンの規律に欠けて貧弱な装備の軍隊に対して決定的な敗北を与えた。ラージンはドンに逃げたが、1671年4月24日、彼は皇帝支持者のコサックによって捕らえられ、皇帝の当局に引き渡された。モスクワに運ばれ拷問を受けたラージンは、赤の広場で四つ裂きの刑に処された。"
  flavor_rus.EVTOPTA3420:0 "すべての分離独立の動きを鎮圧する。"
  flavor_rus.EVTOPTB3420:0 "地方により多くの自治を与える。"
  flavor_rus.EVTNAME3421:0 "ネルチンスク条約"
@@ -4706,7 +4706,7 @@
  flavor_daimyo.23.b:0 "この成金を叩き潰せ！"
  flavor_mam.20.t:0 "密使が良い知らせと共に戻る"
  flavor_pol.EVTNAME1:1 "コモンウェルスの海軍"
- flavor_wal.EVTDESC1:1 "ワラキアの支配が弱いと気づいたので、公国を狙う者は何年間かトルコにて抑留されて過ごした後、一軍の将として戻ってきました。竜の息子、ヴラド・ドラクレシュティは血に飢えた残虐な気質の男です。彼の到着は、彼と交渉するために派遣された大使を身の毛もよだつ串刺し刑としたことを特徴としており、その特徴は彼の支配に抵抗する者達に対し、すさまじい暴力を振るうことを鮮明にしています。"
+ flavor_wal.EVTDESC1:1 "ワラキアの支配が弱いと気づいた公国を狙う者が、数年のトルコ抑留を経て、軍を率いて戻ってきました。竜の子、ヴラド・ドラクレシュティは血に飢えた残虐な気質の男です。ヴラドの登場は、彼と交渉すべく派遣された使節を身の毛もよだつ串刺し刑としたことで、よりはっきりと示されました。彼が支配に抵抗する者たちに対し、大いなる暴力をふるうことを鮮明にしたのです。"
  flavor_wal.EVTNAME2:0 "[TUR.Monarch.GetTitle]の串刺し刑"
  flavor_wal.EVTDESC2F:0 "君主の元に集まった従者達は、来るべき判断のため、彼らの槍と腹の準備を整えています。オスマン王室への残忍な串刺し刑が始まります。\n[TUR.Heir.GetTitle][TUR.Heir.GetName]は恐ろしい展示物を見ることを強いられたため、顔をゆがめました。次は自分の番だという現実が分かり始めたため、その目は恐怖で満たされています。"
  flavor_wal.EVTDESC2H:0 "君主の元に集まった従者達は、来るべき判断のため、彼らの槍と腹の準備を整えています。オスマン王室への残忍な串刺し刑が始まります。"
