--- a/source/localisation/origins_l_english.yml
+++ b/source/localisation/origins_l_english.yml
@@ -1227,7 +1227,7 @@
  kon_abolish_slavery_desc:1 "奴隷貿易にはその役目を果たした。自国を近代化する機会を与えてくれたのだ。しかし、奴隷を要求し、あまつさえ奴隷襲撃を組織化し、社会的地位に関係なく自国民を捕らえるなど、ヨーロッパ人はますます凶暴化しており、今やその悪影響は好影響を上回っている。彼らの大胆不敵な行動を止めさせたければ、奴隷制を廃止し、ヨーロッパ人をアフリカから追放せねばならない！"
  kon_abolish_slavery_tt:0 "§Yアフリカ§!大陸の州の内、交易品が§Y奴隷§!の州を§Yヨーロッパ§!の国家が領有していない。"
  kon_abolish_slavery_bt:0 "ミッション「§Y[Root.GetName]の近代化§!」を先に達成すると、条件が公開されます。"
- kon_amongst_the_great_powers_title:0 "列強中の列強"
+ kon_amongst_the_great_powers_title:0 "列強の中で"
  kon_amongst_the_great_powers_desc:0 "自国はもはや部族ではなく、世界の大帝国の一つだ！偉大な国家へと近代化し、強大な植民者を追放し、野蛮な奴隷制を打倒したのだ！"
  zim_decline_of_zimbabwe_title:0 "ジンバブエの運命"
  zim_decline_of_zimbabwe_desc:0 "ジンバブエはかつてのグレート・ジンバブエ帝国の首都であり、現在は政権の中枢部として機能している。しかし、資源不足から人々が街を離れ、王国のいくつかの別の州へ移ったことで、この街の運命は危機に瀕している。\nこういう場合、我が[Root.GovernmentName]をできる限り安定させることが最重要である。"
