--- a/source/localisation/prov_names_adj_l_english.yml
+++ b/source/localisation/prov_names_adj_l_english.yml
@@ -2191,7 +2191,7 @@
  PROV_ADJ2210:0 "キルマーンシャー"
  PROV_ADJ2211:0 "アルダラーン"
  PROV_ADJ2212:0 "ザンジャーン"
- PROV_ADJ2213:0 "コム"
+ PROV_ADJ2213:0 "ゴム"
  PROV_ADJ2214:0 "ゴレスターン"
  PROV_ADJ2215:0 "ガズヴィーン"
  PROV_ADJ2216:0 "セムナーン"
