--- a/source/localisation/text_l_english.yml
+++ b/source/localisation/text_l_english.yml
@@ -6210,7 +6210,7 @@
  promote_printing_industry_desc:0 "ここでは印刷機は発明されていないが、すでに人々はその可能性に注目している。教会のようなより保守的な人々は、印刷機は悪魔の道具だと考えている人もいるようだが、我々がそれを支援すればヴェネツィアは恩恵を受けると思われる。"
  desc_printing_industry:0 "書かれた言葉を大量に生産する能力は、いくつかの点では両刃の剣である。技術革新と技術進歩を促す一方で、それはまた、人々に常に有用とはいえない奇妙な思想をもたらす。"
  enact_stato_da_mar_title:0 "「海洋州」の制定"
- enact_stato_da_mar_desc:0 "ヴェネツィアは二つの方向を向いている。我々は北イタリアに政治的利益を持ち、地中海に交易利益を持っている。我々の交易利益が保護されていることを確実にするため、我々は二つの統治を分割し、海洋州によって交易関係を守るべきだ。"
+ enact_stato_da_mar_desc:0 "ヴェネツィアは二つの面を持っている。北イタリアには政治的利益があり、地中海には交易的利益がある。我々の交易的利益が確実に保護されるよう、我々は統治を二つに分け、交易関係のことは海の州(Stato da Mar)によって運営すべきだ。"
  desc_stato_da_mar:0 "海洋州はイタリアではなく、ヴェネツィアの公式用語である。統治におけるこれらの土地の確立は、海の支配と交易に完全に対応するものであるため、商人は恩恵を感じている。"
  allow_fuggers_title:0 "フッガー家の金融支配を認める"
  allow_fuggers_desc:0 "1397年のメディチ家の銀行の設立は、その影響力のある一族をヨーロッパの銀行の中心に置いたが、無謀な貸付が銀行への圧力となり、それらの地位において、新しい裕福な家族が現れた。裕福なシュヴァーベンの織工の一族であるフッガー家が、我々への助けを提案している。"
