--- a/source/localisation/womeninhistory_l_english.yml
+++ b/source/localisation/womeninhistory_l_english.yml
@@ -208,7 +208,7 @@
  women_history_events.50.a:0 "彼女を顧問にしたい。"
  women_history_events.50.b:0 "将軍にして一軍の指揮をまかせよう。"
  women_history_events.51.t:0 "ナーゾ・トキー"
- women_history_events.51.d:0 "トキー・パシュトゥーン部族の王であるマラカイ・トキーには、博学な詩人であり、礼儀正しく、愛され、示唆に富んだ人物であるナーゾ・アナーという娘がいる。彼女の教育と育成は彼によって監督され、彼女はカンダハールの博識な学者たちによって訓練され、教育された。彼女の詩とパシュトゥーンワーリへの支持により、ナーゾ・トキーは権威を得た。ギルザイとサドザイが衝突していたパシュトゥーン部族は、ペルシアのサファヴィー朝に対抗する同盟を奨励することで、しばしば彼女によって仲裁された。彼女には多くの物語があるが、我々が知っている真実の一つは、彼女の兄弟が父親の死に復讐したとき、彼女が剣を身に着け、死んだ父親の要塞を守ったことである。彼女は王家と要塞を託され、それを激しく守った。"
+ women_history_events.51.d:0 "トキー・パシュトゥーン部族のスルタンであるマラカイ・トキーには、博学な詩人であり、礼儀正しく、愛情深く、思いやりのある人物であるナーゾ・アナーという娘がいる。彼女の教育と育成は父親によって監督され、彼女はカンダハールの博識な学者たちによって訓練され、教育された。彼女の詩とパシュトゥーンワーリの掟を守ることにより、ナーゾ・トキーは権威を得た。ギルザイとサドザイが衝突していたパシュトゥーン部族は、ペルシアのサファヴィー朝の支配に対抗する同盟を奨励することで、しばしば彼女によって仲裁された。彼女には多くの物語があるが、真実であることが分かっているものは、彼女の兄弟が父親の仇を討ちに行ったとき、彼女は剣を身に着け、男たちとともに死んだ父親の要塞を守ったことである。彼女は王家と要塞を託され、精力的に守った。"
  women_history_events.51.a:0 "彼女の賢明な言葉がここへもたらされるべきだ！"
  women_history_events.51.b:0 "ナーゾ・トキーは我々の軍隊で将軍となるだろう。"
  women_history_events.52.t:0 "秦良玉"
