--- a/source/localisation/domination_l_english.yml
+++ b/source/localisation/domination_l_english.yml
@@ -3894,7 +3894,7 @@
  parliamentarians_rebels_demands_desc:0 "議会派反乱者は、$PRETENDER_MONARCH$を$COUNTRY$共和国の指導者として就任させるよう要求している。"
  building_manufactory:0 "工場"
  ottoman_great_navy:0 "大トルコ海軍"
- ottoman_great_navy_desc:0 "我が艦隊の力はその数にある。敵が海上に出す船1隻につき、トルコ海軍は3隻を投入する。"
+ ottoman_great_navy_desc:0 "我が艦隊の力はその数にある。敵が海上に船を1隻出すたびに、トルコ海軍は3隻投入する。"
  maghrebi_corsairs:0 "マグリブ海賊"
  maghrebi_corsairs_desc:0 "マグリブの水夫たちは地中海でパイレーツやコルセアとして生活を築き上げてきた。我自国の船を予想だにしていない異教徒の沿岸地域を襲撃し略奪することで、マグリブの海賊は自国の大きな収入源だ。"
  ottoman_power_struggle_events.1.t:0 "オスマン帝国の権力闘争"
