Save/Update files [ci skip]

--- a/source/localisation/cossacks_l_english.yml
+++ b/source/localisation/cossacks_l_english.yml
@@ -1064,7 +1064,7 @@
  the_proper_old_ways:0 "適切な古い方法"
  desc_the_proper_old_ways:0 "我々は起源に立ち返り、偉大なチンギス・カンと同時代のやり方であったと想像されるものによって、我々の土地を支配しようと試みている。これを遅れたものだと言う者もいれば、適切だと言う者もいる。"
  church_estate_events.1.t:0 "教会の自由"
- church_estate_events.1.d:0 "$ESTATE_CHURCH$は[Root.GetAdjective]領土の最も重要な柱の一つであり、精神的な指導を行うだけでなく、[Root.Monarch.GetTitle]の利益となる、統治者、裁判官、外交官たちを提供してきた。これらの素晴らしい奉仕と引き換えに、教会の荘園、修道院、またはその他の財産は国家にいかなる税金も払う必要はなく、世俗の権威は$ESTATE_CHURCH$の内政には介入しない。\nしかし、時代は悲惨なものになり、国はますます多くの費用を負担しなければならない。おそらく$ESTATE_CHURCH$が自主的な貢献をすることができるという提案は好意的に受け入れられてはいない。"
+ church_estate_events.1.d:0 "$ESTATE_CHURCH$は[Root.GetAdjective]領土の最も主要な柱の一つであり、精神的な指導を行うだけでなく、[Root.Monarch.GetTitle]の利益となる、行政官、裁判官、外交官たちを提供してきた。これらの素晴らしい奉仕の見返りとして、教会の荘園、修道院、その他の領地は国家にいかなる税金も払う必要はなく、世俗の権威は$ESTATE_CHURCH$の内政には介入しない。\nしかし、時代は切迫したものになり、国はますます多くの費用を負担しなければならなくなった。このような状況下で、$ESTATE_CHURCH$が自発的に寄付をしてくれないだろうかという提案は好意的に受け入れられてはいない。"
  church_estate_events.1.a:0 "彼らが貢献する必要があることを明確にする。"
  church_estate_events.1.b:0 "我々は他の場所で金を見つけるだろう。"
  church_estate_events.101.t:0 "寺院の土地"
