--- a/source/localisation/cradle_of_civilization_l_english.yml
+++ b/source/localisation/cradle_of_civilization_l_english.yml
@@ -720,7 +720,7 @@
  loyal_mamluks_in_high_positions:0 "忠実なマムルーク"
  desc_loyal_mamluks_in_high_positions:0 "我々は前任者によって権力を与えられたマムルークを、新しく雇い入れたマムルークに置き換えた。これにより、カイロの一帯に我々の友人はほとんどいなくなったが、今は少なくとも役員を信頼できることを我々は知っている。"
  mamluk_events.0.t:0 "マムルークの継承"
- mamluk_events.0.d:0 "[Root.Monarch.GetName]の死は、我が国に後継者のいない状態を残した。[Root.Capital.GetCapitalName]のすべての重要なマムルークの一族は、有力者に対して彼の後継者が誰になるのかを明らかにするよう求めている。誰が勝利するかによって、新しい支配者は異なる一族や、国家の異なる要素からの支援を受けることになる。\nただ一つ確実なのは、むしろ自らの集団の利益を目の当たりにしている者は、我々の新しい[Root.Monarch.GetTitle]を喜んで迎えることはないということである。一部の人は、残りの人生を彼の影響力を制限することに費やそうとするかもしれない。"
+ mamluk_events.0.d:0 "[Root.Monarch.GetName]の死により、我が国は統治者が不在の状態となった。[Root.Capital.GetCapitalName]のすべての重要なマムルークの一族たちは、彼の後継者が誰になるのかについての発言権を持つため、その影響力を行使している。誰が勝利するかによって、新しい統治者は異なる一族や、国家の異なる地域からの支持を受けることになる。\nただ一つ確実なのは、自らの集団の利益が優先されることを望んでいる者は、我々の新しい[Root.Monarch.GetTitle]を喜んで迎えることはないだろうということである。一部の人は、彼の影響力を制限するために残りの人生を費やそうとするかもしれない。"
  mamluk_events.0.a:0 "我々には[first_ruler_alternative_province.Culture.GetName]のマムルークの支援が必要だ。"
  mamluk_events.0.b:0 "今は[second_ruler_alternative_province.Culture.GetName]のマムルークだけが役に立つ。"
  mamluk_events.0.c:0 "[third_ruler_alternative_province.Culture.GetName]の候補者が、我々の支援を得る。"
@@ -737,7 +737,7 @@
  mamluk_events.3.d:0 "我々のより強力なマムルークのアミールの一人は、[mamluk_province.GetAreaName]に権力基盤を構築し、[Root.Capital.GetCapitalName]に進出している。首都のマムルークの一族間で、そして城砦の内部でさえ、彼の主張に対する広範な支持の噂がある。"
  mamluk_events.3.a:0 "反逆の罰は死だ！"
  mamluk_events.4.t:0 "派閥主義"
- mamluk_events.4.d:0 "[Root.Monarch.GetTitle]は、[Root.GovernmentName]のマムルークの唯一の所有者とはまったく離れている。影響力のある解放されたマムルークの一族には、多くの場合、彼らの中心地域からの多くの新しく奴隷化された奴隷たちが含まれている。これらの影響力のあるアミールは、多くの場合、後継者の間で最大の影響力を持つものであるが、王位が占有されている場合であっても、マムルークの一族の影響は[Root.GetAdjective]の政治において非常に大きなものである。この派閥主義が[Root.Capital.GetCapitalName]の政治を妨害しないようにするのは、[Root.Monarch.GetName]次第である。"
+ mamluk_events.4.d:0 "[Root.Monarch.GetTitle]は、[Root.GovernmentName]のマムルークの唯一の所有者としてはかけ離れている。奴隷化されたマムルークの有力な一族には、故郷の地域から新しく移入された奴隷が、それ以上ではないにせよ、大量に含まれていることがよくある。これらの有力なアミールは、多くの場合、王位継承の際に最大の影響力を持つ人々なのであるが、王位に就いている場合であっても、[Root.GetAdjective]の政治に対するマムルークの一族の影響は非常に大きなものである。この派閥主義が[Root.Capital.GetCapitalName]の政治を妨害しないようにするのは、[Root.Monarch.GetName]次第である。"
  mamluk_events.4.a:0 "我々は彼らを互いに対抗させるよう試みるべきだ。"
  mamluk_events.4.b:0 "我々はどちらに味方するかを決め、より強力な派閥を支援しよう。"
  mamluk_events.5.t:0 "宮殿での政変"
@@ -745,7 +745,7 @@
  mamluk_events.5.a:0 "我々は[Root.Monarch.GetName]を放棄しない！"
  mamluk_events.5.b:0 "皆、死なねばならない。"
  mamluk_events.6.t:0 "カイロ市"
- mamluk_events.6.d:0 "千年ではないにせよ、我々自身の[Root.GovernmentName]よりもずっと古いカイロは、数百人の支配者と征服者によって飾られてきた。死者の町の墓やフスタートのスラム街、賑やかなカーン・エル・カリーリの市場や偉大なカイロの城塞に至るまで、この街路の建物によってもたらされた秩序は、我々の先人の多くのための記念碑的な努力を証明するものである。それにもかかわらず、都市の支配者として、[Root.Monarch.GetName]には、カイロに[Root.Monarch.GetHerHis]の足跡を残し、それを飾り、発展させ、病と戦い、秩序を維持することが期待されている。"
+ mamluk_events.6.d:0 "我々の[Root.GovernmentName]よりもはるかに古いカイロは、千年ではないにせよ、何百年もの間、支配者と征服者によって飾られてきた。死者の町の墓やフスタートのスラム街、賑やかなカーン・エル・カリーリの市場や偉大なカイロの城塞に至るまで、この迷路のような建物に秩序をもたらすことは、我々の多くの先人たちにとって途轍もない任務であることが証明されている。それにもかかわらず、都市の支配者として、[Root.Monarch.GetName]には、カイロに[Root.Monarch.GetHerHis]の足跡を残し、カイロを飾り、発展させ、病と戦い、秩序を維持することが期待されている。"
  mamluk_events.6.a:0 "我々はスークとカーン・エル・カリーリを改修しよう。"
  mamluk_events.6.b:0 "我々は成長しているスラム街と郊外を改修するべきだ。"
  mamluk_events.6.c:0 "モスクとアル・アズハルに我々の注意を向ける必要がある。"
@@ -764,7 +764,7 @@
  mamluk_events.7.e:0 "忠実なマムルークだけがこの任務を遂行できる。"
  mamluk_events.7.e.tt:0 "§Yアミール・アル＝ハッジ§!のあなたの選択は、巡礼の問題がもたらす影響のタイプだけでなく、あなたの人々の巡礼の隊商の成功率に影響します：\nマムルークのアミール・アル＝ハッジは、あなたの統治者が高い正統性を持っている場合はより信頼でき、正統性が低い場合は信頼性が低くなります。"
  mamluk_events.8.t:0 "巡礼の隊商の襲撃"
- mamluk_events.8.d:0 "最近、二聖都への巡礼者の隊商が待ち伏せ攻撃を受け、略奪された。二聖都へと出発する我々の国民の中で、彼らを守ることは我々の義務であり、今、我々の能力には疑問が持たれている。"
+ mamluk_events.8.d:0 "最近、二聖都への巡礼者の隊商が待ち伏せ攻撃を受け、略奪された。二聖都へ向かう国民を守ることは我々の義務であり、今、我々のその能力が問われている。"
  mamluk_events.8.a:0 "これが再び起こることはないだろう。"
  mamluk_events.8.b:0 "彼らを保護するため、より多くを費やす必要がある。"
  mamluk_events.8.c:0 "我々のアミール・アル＝ハッジは、将来的な良い結果を保証するため、彼の人脈を使うだろう。"
@@ -780,7 +780,7 @@
  mamluk_events.11.a:0 "重要な地位からカラーニスを根絶しよう！"
  mamluk_events.11.b:0 "彼らを信頼する以外に選択肢はない、結局、我々は全員マムルークだ…"
  mamluk_events.12.t:0 "フルーシヤ"
- mamluk_events.12.d:0 "フルーシヤは、若い戦士たちに騎兵戦争の技法を教える一連の馬術の演習である。詳細な規則、訓練手引き、非常に人気のある公式の大会、チャンピオンを持つフルーシヤは、マムルークの貴族戦士たちによって多くの点で完成されている。今日のチャンピオンは過去の戦士と決して戦うことができないと主張する年代史家もいるが、[Root.Monarch.GetTitle]が公式のフルーシヤ大会を準備することは、未だに慣習的で非常に人気があるものであり、チャンピオンは多くの人気のある物語の中で英雄のままである。"
+ mamluk_events.12.d:0 "フルーシヤは、若い戦士たちに騎兵戦争の技法を教える一連の馬術の演習である。詳細な規則、訓練手引き、非常に人気のある公式の大会、チャンピオンがあり、フルーシヤはマムルークの貴族戦士たちによって多くの点で完成された。現在のチャンピオンは過去の戦士と決して戦うことができないと主張する年代史家もいるが、[Root.Monarch.GetTitle]が公式のフルーシヤ大会を準備することは、今でも慣例であり、非常に人気があるものであり、今もチャンピオンは多くの人気のある物語の中で英雄であり続けている。"
  mamluk_events.12.a:0 "これは人々にとって良いことだが、[Root.Monarch.GetTitle]が金を費やすためのものではない。"
  mamluk_events.12.b:0 "我々は騎兵の花形を後援し、馬術演技場を拡張し、建設しよう。"
  furusiyya:0 "フルーシヤ"
