--- a/source/localisation/flavor_events_l_english.yml
+++ b/source/localisation/flavor_events_l_english.yml
@@ -560,12 +560,12 @@
  flavor_mam.2.d:0 "[Root.Monarch.GetTitle][Root.Monarch.GetName]は、特にカイロの都市計画について非常に関心を持っていることで知られていた。1457年、[Root.Monarch.GetTitle]は、バイナル・カスライン地区に2つの新しい公衆浴場と大きな共同住宅を建設する命令を出した。その間に、彼は最初の道、カサバとして知られていたカイロの大通りを広げることを決断した。これはいくつかの古い構造を破壊したが、最終的に往来がはるかに速くなり、重要な歴史家によれば、一般の人々に大きな利益をもたらした。"
  flavor_mam.2.a:0 "アッラーは偉大なり！"
  flavor_mam.3.t:0 "キプロス王"
- flavor_mam.3.d:0 "1458年、スルタンは、女王となった異母妹から父親の王冠を奪い取ることを試みたキプロス王の私生児ジャックを受け入れた。スルタンは「名誉のローブ」で彼を飾り、キプロスの王として彼を即位させることを約束した。女王がカイロに大いなる貢物を送ったとき、スルタンは怒りを和らげ、キプロスに対する女王の権威を認識した。ジャックが数人のマムルークの警備兵を助けたことで、彼らはキプロス大使館に抗議し、攻撃した。\n我々は何をしようか？"
+ flavor_mam.3.d:0 "1458年、スルタンは、父親の王位を継いで女王となった異母妹から王位を奪い取ろうとした、キプロス王の私生児ジャックを迎え入れた。スルタンは「名誉のローブ」で彼を飾り、キプロスの国王として彼を即位させることを約束した。女王がカイロに多量の貢物を送ると、スルタンは譲歩し、キプロスに対する女王の権威を認めた。ジャックは数人のマムルーク衛兵と親交があったことで、彼らは異議を唱え、抗議の意味でキプロス大使館を攻撃した。\n我々は何をしようか？"
  flavor_mam.3.a:0 "キプロスに大使を送れ"
  flavor_mam.3.4:0 "キプロスの統治者はジャックを正統な王として即位させるために我々の要求に耳を傾けるだろう。"
  flavor_mam.3.b:0 "異教徒が何をしようと我々には関係ない"
  flavor_mam.4.t:0 "マムルーク朝の大使が我々に要求した！"
- flavor_mam.4.d:0 "カイロから来た大使は我々にいくつか厳しい要求を突き付けた。彼らは違法な前キプロス王の私生児ジャックを合法な我々の島の統治者であると主張した。我々は何をすべきか？"
+ flavor_mam.4.d:0 "カイロから来た大使は我々にいくつか厳しい要求を突き付けた。彼らは、キプロスの前国王の私生児ジャックが、我々の島の正当な支配者であると主張している。我々はどうすべきか？"
  flavor_mam.4.a:0 "正統な王としてジャックを即位！"
  flavor_mam.4.5:0 "我々はマムルーク朝の属国となるだろう"
  flavor_mam.4.b:0 "袖の下を送れ…"
@@ -573,7 +573,7 @@
  flavor_mam.4.c:0 "異教徒は無視せよ！"
  flavor_mam.4.7:0 "これは彼らを怒らせ、戦争を意味するかもしれない。"
  flavor_mam.5.t:0 "キプロスからのニュース！"
- flavor_mam.5.d:0 "大使は、我々の良い友人である[From.Monarch.GetName]が今やキプロスの王であるという知らせを持ち帰った。彼は長い間信頼できる味方であり、[Root.Monarch.GetTitle]の従順な臣下である。"
+ flavor_mam.5.d:0 "大使は、我々の良い友人である[From.Monarch.GetName]が今やキプロスの王であるという知らせを持ち帰った。彼は長い間信頼できる味方であり、[Root.Monarch.GetTitle]の従順な臣下となるだろう。"
  flavor_mam.5.a:0 "確かに良い知らせだ…"
  flavor_mam.6.t:0 "金で満たされた船が港に！"
  flavor_mam.6.d:0 "キプロスの支配者たちは、以前、我々の賓客であった異端者の貴族に関する主張をすべて忘れさせるために、彼らの財布を空にすることを決断したようだ。"
@@ -1169,7 +1169,7 @@
  flavor_rus.EVTOPTB3419:0 "中国の臣下であるふりをする。"
  flavor_rus.EVTOPTC3419:0 "中国の臣下であるふりをして、貢物を送る。"
  flavor_rus.EVTNAME3420:0 "ステンカ・ラージンのコサックの反乱"
- flavor_rus.EVTDESC3420:0 "ステンカ・ラージン（またはステンカ・チモフェエヴィチ）は、1667-69年にペルシアとロシアの居留地に一連の襲撃を実行し、成功させたドン・コサックの首長だった。大きな名声と富を獲得したラージンは、1670年にヴォルガにあるロシア皇帝の要塞都市に対して新たな戦闘を開始した。約7,000人のコサックの軍勢で、彼はツァリーツィンとアストラハンを強奪した。その両方の町で、彼と彼の兵士たちは酒乱騒ぎと乱痴気騒ぎを起こし、貴族や軍人に対する野蛮な残虐行為を行った。また、地方行政をコサックの自治制度に置き換えた。ラージンはヴォルガへ前進を続け、その途中で彼は奴隷や都市の下層階級を扇動し、彼の反乱に加わえさせた。彼はサラトフを陥落させてシンビルスクに向かったが、彼の反乱はヴォルガ地方全域、さらには中央ロシア州の一部にまで広がっていた。ラージンの成功を警戒して、皇帝アレクセイはシンビルスクを解放するために軍隊を送った。その軍隊は、ラージンの規律に欠けて貧弱な装備の軍隊に対して決定的な敗北を与えた。ラージンはドンに逃げたが、1671年4月24日、彼は皇帝支持者のコサックによって捕らえられ、皇帝の当局に引き渡された。モスクワに運ばれ拷問を受けたラージンは、赤の広場で四つ裂きの刑に処された。"
+ flavor_rus.EVTDESC3420:0 "ステンカ・ラージン（またはステンカ・チモフェエヴィチ）は、1667〜69年にペルシアとロシアの居留地に一連の襲撃を実行し、成功させたドン・コサックの首長。大きな名声と富を獲得したラージンは、1670年にヴォルガにあるツァーリの要塞都市群に対して新たな戦役を開始した。約7,000人のコサックの軍勢で、ツァリーツィンとアストラハンを強奪した。その両市で、彼と彼の兵士たちは酒乱騒ぎと乱痴気騒ぎを起こし、貴族や軍人に対する野蛮な残虐行為を行った。また、地方行政をコサックの自治制度に置き換えた。ラージンはヴォルガへ前進を続け、その途中で奴隷や都市の下層階級を扇動し、彼の反乱に加わえさせた。サラトフを陥落させてシンビルスクに向い、反乱はヴォルガ地方全域、さらには中央ロシア州の一部にまで広がっていた。ラージンの成功を驚いた皇帝アレクセイは、シンビルスク解放のために軍隊を送った。この軍隊は、ラージンの規律に欠けて貧弱な装備の軍隊に決定的敗北を与えた。ドンに逃げたラージンだったが、1671年4月24日、皇帝支持者のコサックによって捕らえられ、当局に引き渡された。モスクワに運ばれ拷問を受けたラージンは、赤の広場で四つ裂きの刑に処された。"
  flavor_rus.EVTOPTA3420:0 "すべての分離独立の動きを鎮圧する。"
  flavor_rus.EVTOPTB3420:0 "地方により多くの自治を与える。"
  flavor_rus.EVTNAME3421:0 "ネルチンスク条約"
@@ -2495,8 +2495,8 @@
  flavor_brapru.36.d:0 "国家が支援できる常設の軍隊を増やすための様々な方法が過去に行われてきたが、我々が必要とするものから見れば十分ではなかった。我々の官僚制がより厳格な体制を支援するのに十分に進んだことで、[Root.Monarch.GetName]は古い州の民兵と傭兵を完全に改造する計画を策定した。\n国家はカントンごとに分割され、そこに住むそれぞれの男性は軍隊に入隊することが要求される。民間人の関与は限定されるべきであり、代わりに[Root.Monarch.GetName]は各連隊の軍事管理者がカントン内での募集を担当することを意図している。"
  flavor_brapru.36.a:0 "プロイセンは国家が軍隊を持つに非ず。軍隊が国家を持つものなり。"
  flavor_brapru.36.a.tt:0 "カントン制度は、我々の人口から予想される何倍もの軍隊を何度も徴兵することを可能にする。"
- flavor_brapru.36.b:0 "我々は、軍事的な必要性が国家の必要性に指図するようにすることはできない！"
- flavor_brapru.36.b.tt:0 "新しく造られた政府機関の強さは、人々の代わりに収入を得るために活用されるだろう。"
+ flavor_brapru.36.b:0 "軍事的な必要性に国家の必要性を指図させるわけにはいかない！"
+ flavor_brapru.36.b.tt:0 "新しく構築された政府機関の強みは、人々の代わりに収入を得るために活用できるところにある。"
  flavor_brapru.37.t:0 "モーゼス・メンデルスゾーン"
  flavor_brapru.37.d:0 "多言語のユダヤ人の学者であり哲学者であったモーゼス・メンデルスゾーンは地味な生まれであった。もともと、彼はラビになることを意図していたが、宗教教育は彼を[berlin_province.GetCapitalName]に導き、代わりに出版された作品により、キリスト教徒とユダヤ人の間で高く評価された。ドイツ語とヘブライ語で書かれた彼の著作と出版物は、自身の家でさえ行われている開かれた議論と共に、[Root.Country.GetName]には見られない規模の人々の間で寛容の道を切り開いている。高い知性と深い思考の魅力的な人物である彼を、「ドイツのソクラテス」と呼んでいる者もいる。"
  flavor_brapru.37.a:0 "何と貴重な人物だ！"
@@ -3652,13 +3652,13 @@
  flavor_son.3.d:0 "ソンガイ帝国の最も重要な記録であるスーダン年代記は、1655年頃にアブド・アル＝ラフマン・アル・サディによって書かれた。それはマリ、ソンガイ、トゥアレグの初期史についての簡単な歴史を述べているが、年代記の主要部分は15、16世紀のソンガイの歴史を描いている。また、ジェンネとトンブクトゥの学者と聖者の伝記も掲載されている。"
  flavor_son.3.a:0 "良い知らせだ！"
  flavor_eth.1.t:0 "ペロ・ダ・コヴィリャン"
- flavor_eth.1.d:0 "奇妙な男が我々の海岸にやって来たが、外国人が通常我々に向かう紅海の航路からではない。彼は、岬の外からの航海の一部であると主張している。我々の知る限りではこれまでに試みられたことのない航海である。彼の祈りは以前に見たものとは異なるが、彼は仲間のキリスト教徒の君主からの挨拶をもたらす。この男をどう扱うべきだろうか？"
+ flavor_eth.1.d:0 "奇妙な男が我々の海岸にやって来たが、外国人が通常我々に向かう紅海の航路からではない。彼は、岬の外からの航海の一部であると主張している。我々の知る限りではこれまでに試みられたことのない航海である。彼は同士のキリスト教徒の君主からの挨拶を持参してきており、彼の祈りは今まで見たことがあるものとは異なっている。この男をどう扱うべきだろうか？"
  flavor_eth.1.a:0 "彼を称える！"
  flavor_eth.1.b:0 "彼を追放する！"
  flavor_eth.1.c:0 "彼を処刑する！"
  flavor_eth.1.a.desc:0 "より多くの§Y訪問者§!がまもなくポルトガルからやって来るでしょう。"
  flavor_eth.2.t:0 "大使館はここだ！"
- flavor_eth.2.d:0 "以前の使者を送り出した同じ国を代表するフランシスコ・アルヴァレスは、我々の2つの体制が共にできることについて話し合いたいと望んでいる。彼は「プレスター・ジョン」という国を探していたと言うが、明らかに我々は彼が探していた国である。我々は交流を始めるべきだろうか？"
+ flavor_eth.2.d:0 "以前の使者を送り出した国と同じ国の代表であるフランシスコ・アルヴァレスは、我々の2つの政府が共にできることについて話し合いを希望している。彼は「プレスター・ジョン」という国を探していたと言うが、どうやら我々は彼が探していた国のようである。我々は交流を始めるべきだろうか？"
  flavor_eth.2.a:0 "マムルークに対する援助を求める！"
  flavor_eth.2.b:0 "文化的な交流を求めますか？"
  flavor_eth.2.c:0 "おそらく交易取引が順当だろうか？"
@@ -3666,29 +3666,29 @@
  opinion_military_aid:0 "軍事援助を行う。"
  opinion_refused_military_aid:0 "援助を拒否する。"
  flavor_eth.3.t:0 "プレスター・ジョン？"
- flavor_eth.3.d:0 "伝説のプレスター・ジョンであるかもしれないし、そうでないかもしれないエチオピアのニーガスは、明らかに苦しい時を過ごしており、彼の土地を回復するのを助けるよう我々に懇願している。彼はマテウスという大使を派遣した。マテウスはキリスト教徒だが、これまで見たことのない種類のものでもあり、マスターの正当な支配権を回復するように我々に願っているが、マムルークの力は依然として脅かされており、利益になるかどうか疑念の余地がある。マテウスを助けるべきだろうか？"
+ flavor_eth.3.d:0 "伝説のプレスター・ジョンであるか不明だが、エチオピアのニーガスは明らかに苦境に陥っており、土地を回復するのを助けるよう我々に懇願している。彼はマテウスという大使を派遣した。マテウスはキリスト教徒だが、これまで見たことのない種類であるもののキリスト教であり、主人の正当な支配権を回復するように我々に願っているが、マムルークの力は依然として脅威であり、利益になるかどうか疑念の余地がある。マテウスを助けるべきだろうか？"
  flavor_eth.3.a:0 "神がそれを望まれる！"
  flavor_eth.3.b:0 "私はプレスター・ジョンが我々を助けるはずだと思っていたが、あべこべだな？"
  eth_mil_aid_from_portugal:0 "ポルトガルからの軍事援助"
  desc_eth_mil_aid_from_portugal:0 "我々が敵として分かち合う異教徒たちに対する、信仰の兄弟たちからの軍事援助である。"
  flavor_eth.4.t:0 "西からの助け"
- flavor_eth.4.d:0 "兵器や軍隊を運ぶ小さな艦隊が我々の海岸に到着した。これらのポルトガル人兵士の指導者は、彼らの君主からの、「我々は共にキリスト教徒の君主であり、異教徒との闘いにおいて団結している」という手紙を携えていた。"
+ flavor_eth.4.d:0 "兵器や軍隊を載せた小さな艦隊が海岸に到着した。ポルトガル兵の指揮官は、彼らの君主からの「我々は共にキリスト教の君主であり、異教徒との闘いにおいて団結している」という手紙を携えていた。"
  flavor_eth.4.a:0 "神は善である！"
  flavor_eth.5.t:0 "我々は放置された"
  flavor_eth.5.d:0 "ポルトガルの大使館はもはやなく、交易商はもうやって来ないし、助けを求める我々の要求にも返答はない。"
  flavor_eth.5.a:0 "我々は孤独だ！"
  flavor_nub.1.t:0 "新たな国家がスーダンに出現！"
- flavor_nub.1.d:0 "我々はかなりの期間、古いヌビアのキリスト教王国の最後の貧しい残党を維持していた、スーダンの土地を無視してきたが、そのような放置はもはや不可能である。センナールと呼ばれる活気に満ちた新しい国家がフンジと呼ばれる南部の移住者によって形成された。フンジはこれらの残党を征服し、我々の国境に及ぶ大きな新しい国家を作り上げた。"
- flavor_nub.1.a:0 "誰がそれらの荒れ地を所有しようが、我々は何をそんなに気にしているのだ？"
+ flavor_nub.1.d:0 "我々はかなり長い間、ヌビアの最後のキリスト教王国がその哀れな残骸を維持していたスーダンの土地を無視してきたが、そのような放置はもはや不可能である。フンジと呼ばれる南方からの移住者によって、センナールという活気に満ちた新しい国家が形成された。フンジはこれらの残党を征服し、我々の国境にまで迫る大きな新しい国家を作り上げたのだ。"
+ flavor_nub.1.a:0 "誰がその荒れ地を所有しようが、どうでもよいではないか？"
  funj_spawning_region:0 "スーダン"
  funj_conversion_positive:0 "イスラムに改宗する。"
  funj_conversion_negative:0 "イスラムに改宗する。"
  flavor_nub.2.t:0 "イスラムへの改宗？"
- flavor_nub.2.d:0 "我々は伝統的にキリスト教徒と伝統的なアニミズム信仰を組み合わせて実践してきたが、北部のムスリム国家の力は政治的に魅力的であり、これらの強力な帝国と我々自身が提携する可能性を広げている。しかし、我々の人々自身はあまり熱心ではないかもしれない。"
+ flavor_nub.2.d:0 "我々は伝統的にキリスト教徒と伝統的なアニミズム信仰を習合して実践してきたが、北部のムスリム諸国家の勢力が増大しており、これらの強力な国家と同盟できる可能性が広がるため、改宗は政治的に魅力的なものとなっている。しかし、我々の国民はあまり熱心ではないかもしれない。"
  flavor_nub.2.a:0 "アッラーの他に神はなし。"
  flavor_nub.2.b:0 "先祖の信仰を放棄するだと？決してない！"
  flavor_sul.1.t:0 "スールーの台頭"
- flavor_sul.1.d:0 "スールーの海にある島々は、何世紀もの間、より小さな王国に分かれて暮らしてきた。これらの土地は現在、最初のスルタンの下で統一されている。尊敬されるイスラムの学者としても知られているスルタンは、この地域の最も古いモスクの一つである島々の政治的、宗教的な制度を強化してきた。異民族間の婚姻、カリスマ、革新的な外交を通して、彼らは現在、共通の法体系によって統一されている。世界はスールーのスルタンの台頭を見ている。"
+ flavor_sul.1.d:0 "スールーの海にある諸島は、何世紀もの間、小さな王国に分かれて暮らしてきた。これらの土地は現在、初代のスルタンの下で統一されている。イスラムの高名な学者としても知られているスルタンは、諸島の政治と宗教の両面を強化し、この地域で最も古いモスクのひとつを所有している。異民族間の婚姻、カリスマ性、革新的な外交を通して、彼らは現在、共通の法典によって統一されている。世界はスールーのスルタンの台頭を見ている。"
  flavor_sul.1.a:0 "スルタンが道理をわきまえた人物であることを望もう、そうでなければ世界はその崩壊を見るだろう。"
  ven_council_of_ten_strong:0 "十人委員会の強化"
  desc_ven_council_of_ten_strong:0 "もともと、共和国制度への危険に対処することのみを目的としながら、十人委員会は、大評議会も成し得ないような、非常に広範な権限を与えられている。いく人かは、これはあまりに大きすぎる昇格であると段階であると感じているが、しかしながら、逆に、現在のところ、十人委員会自体が代表制度にとって最大の脅威であるかもしれない。"
