--- a/source/localisation/muslim_dlc_l_english.yml
+++ b/source/localisation/muslim_dlc_l_english.yml
@@ -66,7 +66,7 @@
  muslim_dlc.EVTOPTA16:0 "厳格なシャリーア法"
  muslim_dlc.EVTOPTB16:0 "あまり厳格でないシャリーア法"
  muslim_dlc.EVTNAME17:1 "グラーム"
- muslim_dlc.EVTDESC17:1 "かつて$COUNTRY$の奴隷兵士たちは、彼が望む能力を提供させるため、主君の負担で訓練と教育を受けていた。彼らのほとんどは兵士であり、いく人かは管理者であったが、彼らはすべてイスラムに改宗した。彼らのうちのいくつかは、依然として、$COUNTRY$に残り、主君なしで自分たちの人生に意味を取り戻す方法を模索している。グラームは、$MONARCHTITLE$に代理人を派遣し、$COUNTRY$で奉仕を見い出すことができるかを尋ねている。"
+ muslim_dlc.EVTDESC17:1 "かつて$COUNTRY$の奴隷兵士たちは、主君の費用負担で訓練と教育を受け、主君が望むあらゆる職務に就いていた。彼らのほとんどは兵士であり、中には行政官もいたが、彼らはすべてイスラムに改宗している。彼らのうちのいくつかは、依然として$COUNTRY$に残り、主君なしで自分たちの人生に意味を取り戻す方法を模索している。グラームは、$MONARCHTITLE$に代理人を派遣し、$COUNTRY$で奉仕を見い出すことができるかを尋ねている。"
  muslim_dlc.EVTOPTA17:0 "彼らに管理業務を与える。"
  muslim_dlc.EVTOPTB17:0 "兵士として彼らを雇う。"
  muslim_dlc.EVTOPTC17:0 "彼らに外交団を支援させよう。"
@@ -80,7 +80,7 @@
  muslim_dlc.EVTOPTA19:0 "彼の才能は宮廷で必要とされている。"
  muslim_dlc.EVTOPTB19:0 "彼は我々の支持を得るだろう。"
  muslim_dlc.EVTOPTC19:0 "彼を無視する。"
- muslim_dlc.EVTNAME20:0 "アヤ・ソフィアをモスクに改修"
+ muslim_dlc.EVTNAME20:0 "ハギア・ソフィアをモスクに改修"
  muslim_dlc.EVTDESC20:0 "ビザンツ皇帝ユスティニアヌス1世は532年にアヤ・ソフィアの建築を命じ、ミレトスのイシドロスとトラレスのアンテミオスを設計者に選んだ。エフェソスのアルテミス神殿よりギリシャ文明の柱を、エジプトの斑岩の採石場からの大きな石、テッサリアの緑色の大理石、ボスポラス地方の黒い石、シリアの黄色の石をそれぞれ用いて作られた。キリスト教の教会は未だに使用されているが、モスクへの改修を望む者からは歓迎されていない。アヤソフィアは修復の必要が差し迫っており、モスクに改修する前に修理されねばならないだろう。"
  muslim_dlc.EVTOPTA20:0 "修復し、改修せよ！"
  muslim_dlc.EVTOPTB20:0 "そのままにしておけ"
